CNCF/CICD/spinnaker/spinnaker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: default
spec:
  rules:
  - host: yakir-spinnaker.yakir.com
    http:
      paths:
      - backend:
          service:
            name: spinnaker-xxx
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.205.105
    - ip: 172.20.205.106
    - ip: 172.20.205.98
